--- a/www/pages/profile/profile.html
+++ b/www/pages/profile/profile.html
@@ -23,4 +23,84 @@
 
 
 
+
+
+    <ion-content has-header="true">
+      <div id="profile-bg"></div>
+      <div id="content">
+
+        <div id="profile-info">
+          <img id="profile-image" src="../img/shovon_pp.jpg">
+          <h3 id="profile-name">Shovon</h3>
+          <span id="profile-description">UI/UX Developer of <a rel="nofollow" rel="noreferrer"href="https://www.freemig.com">@Freemig</a></span>
+        </div>
+
+        
+      </div>
+    </ion-content>
+
+
+
+
+<script type="text/javascript"
+    angular.module('ionic.example', ['ionic.service.platform', 'ionic.ui.content', 'ionic.ui.list'])
+
+    // A simple relative timestamp filter
+    .filter('relativets', function() {
+      return function(value) {
+        var now = new Date();
+        var diff = now - value;
+
+        // ms units
+        var second = 1000;
+        var minute = second * 60;
+        var hour = minute * 60;
+        var day = hour * 24;
+        var year =  day * 365;
+        var month = day * 30;
+
+        var unit = day;
+        var unitStr = 'd';
+        if(diff > year) {
+          unit = year;
+          unitStr = 'y';
+        } else if(diff > day) {
+          unit = day;
+          unitStr = 'd';
+        } else if(diff > hour) {
+          unit = hour;
+          unitStr = 'h';
+        } else if(diff > minute) {
+          unit = minute;
+          unitStr = 'm';
+        } else {
+          unit = second;
+          unitStr = 's';
+        }
+
+        var amt = Math.ceil(diff / unit);
+        return amt + '' + unitStr;
+      }
+    })
+
+    .controller('ProfileCtrl', function($scope) {
+      $scope.posts = [];
+
+      for(var i = 0; i < 7; i++) {
+        // Fake a date
+        var date = (+new Date) - (i * 1000 * 60 * 60);
+        $scope.posts.push({
+          created_at: date,
+          text: 'Doing a bit of ' + ((Math.floor(Math.random() * 2) === 1) ? 'that' : 'this')
+        });
+      }
+    });
+
+    </script>
+
+  </body>
+</html>
+
+
+
 </ion-view>
