update profile page

--- a/www/pages/profile/profile.html
+++ b/www/pages/profile/profile.html
@@ -33,9 +33,17 @@
           <img id="profile-image" src="../img/shovon_pp.jpg">
           <h3 id="profile-name">Shovon</h3>
           <span id="profile-description">UI/UX Developer of <a rel="nofollow" rel="noreferrer"href="https://www.freemig.com">@Freemig</a></span>
+
+          <div class="row" id="profile-btn">
+              <div class="col col-33">Connects<br>24</div>
+              <div class="col col-33">Followers<br>25</div>
+              <div class="col col-33">Following<br>12</div>
+</div>
+
         </div>
 
-        
+
+
       </div>
     </ion-content>
 
