--- a/www/pages/home/post-types/text/text.html
+++ b/www/pages/home/post-types/text/text.html
@@ -49,9 +49,9 @@
 
     <div class="item tabs tabs-secondary icon-small" id="like_comment_icon">
       <a class="tab-item item-icon-left" href=""><i class="icon ion-heart" style="font-size:25px"></i></a>
-      <a class="tab-item item-icon-left" href=""><i class="icon ion-ios-chatbubble" style="margin-left:80px;font-size:25px"></i></a>
+      <a class="tab-item item-icon-left" href=""><i class="icon ion-ios-chatbubble" style="margin-left:55px;font-size:25px"></i></a>
+      <a class="tab-item item-icon-left" href=""><i class="icon ion-share" style="margin-left:110px;font-size:25px"></i></a>
       <a class="tab-item item-icon-right"  href=""><i class="icon ion-more" style="font-size:25px"></i></a>
-
     </div>
 
 
