--- a/www/pages/profile/profile.html
+++ b/www/pages/profile/profile.html
@@ -1,4 +1,4 @@
-<ion-view title="Profile">
+<ion-view title="Profile" ng-cloak>
 
   <ion-nav-bar class="bar-positive">
 
@@ -13,102 +13,27 @@
   </ion-nav-bar>
 
 
-  <ion-content padding="false" scroll="true">
-    <div class="row row-no-padding">
-      <div class="col">
-        <img ng-src="{{vm.apirul}}{{vm.user.profileAvatar}}">
-      </div>
-    </div>
-  </ion-content>
 
 
-
-
-
-    <ion-content has-header="true">
-      <div id="profile-bg"></div>
+  <ion-content has-header="true">
+    <div ng-if="vm.renderhtmlNow">
+      <div id="profile-bg" ng-style="{'background-image': 'url({{vm.coverImage}})'}"></div>
       <div id="content">
 
         <div id="profile-info">
-          <img id="profile-image" src="../img/shovon_pp.jpg">
-          <h3 id="profile-name">Shovon</h3>
-          <span id="profile-description">UI/UX Developer of <a rel="nofollow" rel="noreferrer"href="https://www.freemig.com">@Freemig</a></span>
+          <img ng-src="{{vm.proPic}}" id="profile-image">
+          <h3 id="profile-name">{{vm.user.full_name}}</h3>
+          <span id="profile-description" ng-if="!vm.userOverview.workTitle == ''">{{vm.userOverview.workTitle}} <a rel="nofollow" rel="noreferrer"href="https://www.freemig.com">@Freemig</a></span>
 
           <div class="row" id="profile-btn">
-              <div class="col col-33">Connects<br>24</div>
-              <div class="col col-33">Followers<br>25</div>
-              <div class="col col-33">Following<br>12</div>
-</div>
+            <div class="col col-33">Connections<br>{{vm.userOverview.connections}}</div>
+            <div class="col col-33">Followers<br>{{vm.userOverview.follower}}</div>
+            <div class="col col-33">Following<br>{{vm.userOverview.following}}</div>
+          </div>
 
         </div>
-
-
-
       </div>
-    </ion-content>
-
-
-
-
-<script type="text/javascript"
-    angular.module('ionic.example', ['ionic.service.platform', 'ionic.ui.content', 'ionic.ui.list'])
-
-    // A simple relative timestamp filter
-    .filter('relativets', function() {
-      return function(value) {
-        var now = new Date();
-        var diff = now - value;
-
-        // ms units
-        var second = 1000;
-        var minute = second * 60;
-        var hour = minute * 60;
-        var day = hour * 24;
-        var year =  day * 365;
-        var month = day * 30;
-
-        var unit = day;
-        var unitStr = 'd';
-        if(diff > year) {
-          unit = year;
-          unitStr = 'y';
-        } else if(diff > day) {
-          unit = day;
-          unitStr = 'd';
-        } else if(diff > hour) {
-          unit = hour;
-          unitStr = 'h';
-        } else if(diff > minute) {
-          unit = minute;
-          unitStr = 'm';
-        } else {
-          unit = second;
-          unitStr = 's';
-        }
-
-        var amt = Math.ceil(diff / unit);
-        return amt + '' + unitStr;
-      }
-    })
-
-    .controller('ProfileCtrl', function($scope) {
-      $scope.posts = [];
-
-      for(var i = 0; i < 7; i++) {
-        // Fake a date
-        var date = (+new Date) - (i * 1000 * 60 * 60);
-        $scope.posts.push({
-          created_at: date,
-          text: 'Doing a bit of ' + ((Math.floor(Math.random() * 2) === 1) ? 'that' : 'this')
-        });
-      }
-    });
-
-    </script>
-
-  </body>
-</html>
-
-
+    </div>
+  </ion-content>
 
 </ion-view>
