--- a/www/pages/home/post-types/video/video.html
+++ b/www/pages/home/post-types/video/video.html
@@ -17,11 +17,27 @@
         </video>
     </div>
 
-    <div class="item tabs tabs-secondary icon-small" id="like_comment_icon">
-        <a class="tab-item item-icon-left" href=""><i class="icon ion-heart" style="font-size:25px"></i></a>
-        <a class="tab-item item-icon-left" href=""><i class="icon ion-ios-chatbubble" style="margin-left:55px;font-size:25px"></i></a>
-        <a class="tab-item item-icon-left" href=""><i class="icon ion-share" style="margin-left:110px;font-size:25px"></i></a>
-        <a class="tab-item item-icon-right" href=""><i class="icon ion-more" style="font-size:25px"></i></a>
-    </div>
+
+
+
+<!-- Like, comment, share and view more -->
+    <div class="item row" >
+
+        <div class="col col-20">
+          <a href=""><i class="icon ion-heart" style="font-size:20px; vertical-align:middle;"></i></a>
+          <span style="font-size:12px"> 25</span></div>
+
+        <div class="col col-20">
+          <a href=""><i class="icon ion-ios-chatbubble" style="font-size:20px; vertical-align:middle;"></i></a>
+            <span style="font-size:12px"> 15</span></div>
+
+       <div class="col col-20">
+         <a href=""><i class="icon ion-share" style="font-size:20px; vertical-align:middle;"></i></a>
+         <span style="font-size:12px"> 5</span></div>
+
+      <div class="col col-offset-20 col-20">
+          <a class= "item-icon-right" href=""><i class="icon ion-more" style="font-size:20px; vertical-align:middle;"></i></a></div>
+
+ </div>
 
 </div>
