update user type styling

--- a/www/pages/home/home.html
+++ b/www/pages/home/home.html
@@ -18,7 +18,7 @@
 
 <!-- regular and professional -->
   <div class="bar bar-subheader bar-light">
-      <ion-segment ng-model="feedType" full="false" positive>
+      <ion-segment ng-model="feedType" full="false" balanced>
         <ion-segment-button value="'1''" ng-click="vm.changeFeedType(1)">
           Regular
         </ion-segment-button>
@@ -61,7 +61,7 @@
 
       <div  class="button-bar" style="padding-bottom:-5px">
         <button class="button button-positive  button-outline icon ion-camera"> Photos</button>
-        <button class="button button-calm button-outline icon ion-location"> Check in</button>
+        <button class="button button-balanced button-outline icon ion-location"> Check in</button>
       </div>
 
 
