--- a/www/pages/popovers/home-feed-post-edit.html
+++ b/www/pages/popovers/home-feed-post-edit.html
@@ -1,8 +1,15 @@
-<ion-popover-view>
-    <ion-header-bar>
-      <h1 class="title">My Popover Title</h1>
-    </ion-header-bar>
+<ion-popover-view style="height: 85px; width: 100px;">
     <ion-content>
-      Hello!
+      <ion-list>
+        <ion-item class="item-icon-left narrow-padding">
+          <i class="ion-wand"> Edit</i> 
+        </ion-item>
+        <ion-item class="item-icon-left narrow-padding">
+          <i class="ion-trash-a"> Remove</i> 
+        </ion-item>
+        <ion-item class="item-icon-left narrow-padding">
+          <i class="ion-bookmark"> Save</i> 
+        </ion-item>
+      </ion-list>
     </ion-content>
   </ion-popover-view>
