--- a/www/pages/home/home.html
+++ b/www/pages/home/home.html
@@ -17,7 +17,7 @@
 
 
 <!-- regular and professional -->
-  <div class="bar bar-subheader bar-light">
+  <div class="bar bar-subheader bar-positive">
       <ion-segment ng-model="feedType" full="false" balanced>
         <ion-segment-button value="'1''" ng-click="vm.changeFeedType(1)">
           Regular
@@ -60,8 +60,8 @@
 
 
       <div  class="button-bar" style="padding-bottom:-5px">
-        <button class="button button-positive  button-outline icon ion-camera"> Photos</button>
-        <button class="button button-balanced button-outline icon ion-location"> Check in</button>
+        <button class="button button-positive button-clear icon ion-camera"> Photos</button>
+        <button style="border-left: 1px solid #33cd5f;" class="button button-balanced button-clear icon ion-location"> Check in</button>
       </div>
 
 
