--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -25,11 +25,32 @@
           <h3 id="profile-name">{{vm.user.full_name}}</h3>
           <span id="profile-description" ng-if="!vm.userOverview.workTitle == ''">{{vm.userOverview.workTitle}} <a rel="nofollow" rel="noreferrer"href="https://www.freemig.com">@Freemig</a></span>
 
-          <div class="row" id="profile-btn">
+
+
+<!-- connections, follower, following items -->
+
+        <div class="row" id="profile-btn">
+            <div class="col col-33">
+                <button ng-click="vm.openModal('connections')" class="button button-small button-light">Connections<br>{{vm.userOverview.connections}}</button>
+            </div>
+
+            <div class="col col-33">
+                <button ng-click="vm.openModal('followers')" class="button button-small button-light">Followers<br>{{vm.userOverview.follower}}
+            </div>
+
+            <div class="col col-33">
+                <button ng-click="vm.openModal('following')" class="button button-small button-light">Following<br>{{vm.userOverview.following}}
+            </div>
+
+        </div>
+
+
+
+          <!-- <div class="row" id="profile-btn">
             <div ng-click="vm.openModal('connections')" class="col col-33">Connections<br>{{vm.userOverview.connections}}</div>
             <div ng-click="vm.openModal('followers')" class="col col-33">Followers<br>{{vm.userOverview.follower}}</div>
             <div ng-click="vm.openModal('following')" class="col col-33">Following<br>{{vm.userOverview.following}}</div>
-          </div>
+          </div> -->
 
         </div>
       </div>
