--- a/www/pages/modals/connections-modal.html
+++ b/www/pages/modals/connections-modal.html
@@ -1,12 +1,19 @@
 <ion-modal-view>
     <ion-header-bar align-title="left" class="bar-positive">
-        <h1 class="title">Title!</h1>
+        <h1 class="title">All Connections</h1>
         <div class="buttons">
             <button ng-click="vm.closeModal()" class="button button-icon button-clear ion-close"></button>
         </div>
     </ion-header-bar>
 
     <ion-content>
-        Connections modal
+        <div class="list">
+            <a ng-repeat="c in vm.connections" class="item item-avatar" href="#">
+                <img ng-src="{{vm.apiurl}}{{c.avatar}}">
+                <h2>{{c.full_name}}</h2>
+                <p>{{c.workTitle}}</p>
+            </a>
+        </div>
     </ion-content>
+
 </ion-modal-view>
