adding connections list

--- a/www/pages/modals/connections-modal.html
+++ b/www/pages/modals/connections-modal.html
@@ -8,5 +8,14 @@
 
     <ion-content>
         Connections modal
+
+        <div class="list card">
+            <div class="item item-avater">
+              <img src="">
+              <h2></h2>
+              <p><p>
+            </div>
+        </div>
+
     </ion-content>
 </ion-modal-view>
