update the basic info

--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -51,15 +51,22 @@
 
 <!-- basic info -->
 
-      <div class="card list">
-             <div class="item item-divider">Basic Information</div>
-                 <a class="item item-icon-left" href=""> <i class="icon ion-ios-navigate"></i><span style="font-size:15px">Lives in Dhaka, Bangladesh</span></a>
-                 <a class="item item-icon-left" href=""> <i class="icon ion-ios-telephone-outline"></i><span style="font-size:15px">+880 1710 234 567</span></a>
-                 <a class="item item-icon-left" href=""> <i class="icon ion-android-calendar"></i><span style="font-size:15px">January 1, 1990</span></a>
+      <div class="list">
+                 <a class="item item-icon-left" href=""> <i class="icon ion-ios-navigate"></i><span style="font-size:12px">Lives in Dhaka, Bangladesh</span></a>
+                 <a class="item item-icon-left" href=""> <i class="icon ion-ios-telephone-outline"></i><span style="font-size:12px">+880 1710 234 567</span></a>
+                 <a class="item item-icon-left" href=""> <i class="icon ion-android-calendar"></i><span style="font-size:12px">January 1, 1990</span></a>
       </div>
 
 
-    
+
+
+<!-- connections list -->
+
+
+
+
+
+
 
 
   </div>
