updated user type style

--- a/www/pages/home/home.html
+++ b/www/pages/home/home.html
@@ -19,10 +19,10 @@
 <!-- regular and professional -->
   <div class="bar bar-subheader bar-positive">
       <ion-segment ng-model="feedType" full="false" balanced>
-        <ion-segment-button value="'1''" ng-click="vm.changeFeedType(1)">
+        <ion-segment-button value="'1''" ng-click="vm.changeFeedType(1)" style="color:white">
           Regular
         </ion-segment-button>
-        <ion-segment-button value="'2''" ng-click="vm.changeFeedType(2)">
+        <ion-segment-button value="'2''" ng-click="vm.changeFeedType(2)" style="color:white">
           Professional
         </ion-segment-button>
     </ion-segment>
