--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -112,25 +112,78 @@
 
 
 <div>
-    <div class="row item item-borderless item-content">
-        <div class="col">
+    <div class="row item item-borderless">
+        <div class="col col-25">
+            <a href=""><div class="item item-avatar item-content item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
+        </div>
+
+        <div class="col col-25">
             <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
         </div>
 
-        <div class="col">
+        <div class="col col-25">
             <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
         </div>
 
-        <div class="col">
-            <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
-        </div>
-
-        <div class="col">
+        <div class="col col-25">
             <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
         </div>
    </div>
 
+
+
+   <div class="row item item-borderless">
+       <div class="col col-25">
+           <a href=""><div class="item item-avatar item-content item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
+       </div>
+
+       <div class="col col-25">
+           <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
+       </div>
+
+       <div class="col col-25">
+           <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
+       </div>
+
+       <div class="col col-25">
+           <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
+       </div>
+  </div>
+
+
+
+  <div class="row item item-borderless">
+      <div class="col col-25">
+          <a href=""><div class="item item-avatar item-content item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
+      </div>
+
+      <div class="col col-25">
+          <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
+      </div>
+
+      <div class="col col-25">
+          <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
+      </div>
+
+      <div class="col col-25">
+          <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
+      </div>
+ </div>
+
+
+ <button class="button button-block button-light"><span style="color:#11a74a">See All Connections</span></button>
+
 </div>
+
+
+
+
+
+
+<!-- photo gallery -->
+
+
+
 
 
 
