--- a/www/pages/home/post-types/text/text.html
+++ b/www/pages/home/post-types/text/text.html
@@ -48,7 +48,7 @@
 <!-- Like, comment, share and view more -->
     <div class="item row" >
         <div class="col col-20">
-            <a href=""><i class="icon ion-heart" style="font-size:20px; vertical-align:middle;"></i></a>
+            <a ng-click="vm.likePost()"><i class="icon ion-heart" style="font-size:20px; vertical-align:middle;"></i></a>
             <span style="font-size:12px"> {{vm.post.likes}}</span></div>
         <div ui-sref="app.tabs.comments" class="col col-20">
             <a><i class="icon ion-ios-chatbubble" style="font-size:20px; vertical-align:middle;"></i></a>
