--- a/www/pages/popovers/home-feed-post-edit.html
+++ b/www/pages/popovers/home-feed-post-edit.html
@@ -1,15 +1,13 @@
-<ion-popover-view style="height: 85px; width: 100px;">
+<ion-popover-view style="height: 100px; width: 80px;">
     <ion-content>
-      <ion-list>
-        <ion-item class="item-icon-left narrow-padding">
-          <i class="ion-wand"> Edit</i> 
-        </ion-item>
-        <ion-item class="item-icon-left narrow-padding">
-          <i class="ion-trash-a"> Remove</i> 
-        </ion-item>
-        <ion-item class="item-icon-left narrow-padding">
-          <i class="ion-bookmark"> Save</i> 
-        </ion-item>
-      </ion-list>
+
+
+        <div>
+          <button class="button no-padding button-positive button-small button-clear icon icon-left ion-wand"><span style="padding-left:5px">Edit</span></button>
+          <button class="button button-positive button-small button-clear icon icon-left ion-trash-a"><span style="padding-left:6px">Remove</span></button>
+          <button class="button button-positive button-small button-clear icon icon-left fa fa-bookmark-o"><span style="padding-left:6px">Save</span></button>
+        </div>
+
+
     </ion-content>
   </ion-popover-view>
