updated edit icon

--- a/www/pages/home/post-types/album/album.html
+++ b/www/pages/home/post-types/album/album.html
@@ -45,10 +45,10 @@
             <a href=""><i class="icon ion-heart" style="font-size:20px; vertical-align:middle;"></i></a>
             <span style="font-size:12px"> {{vm.post.likes}}</span></div>
         <div ui-sref="app.tabs.comments" class="col col-20">
-            <a><i class="icon ion-ios-chatbubble" style="font-size:20px; vertical-align:middle;"></i></a>
+            <a><i class="icon ion-ios-chatbubble" style="font-size:22px; vertical-align:middle;"></i></a>
             <span style="font-size:12px"> {{vm.post.comments}}</span></div>
         <div class="col col-20">
-            <a href=""><i class="icon fa fa-share-alt" style="font-size:18px; vertical-align:middle;"></i></a>
+            <a href=""><i class="icon ion-android-share-alt" style="font-size:20px; vertical-align:middle;"></i></a>
             <span style="font-size:12px"> {{vm.post.shares}}</span></div>
         <div class="col col-offset-20 col-20">
             <a class="item-icon-right" href=""><i class="icon ion-more" style="font-size:20px; vertical-align:middle;"></i></a></div>
