working on profile basic info and connections

--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -116,21 +116,22 @@
 
 <div>
     <div class="row item item-borderless">
-        <div class="col col-25">
-            <a href=""><div class="item item-avatar item-content item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
+        <div class="col" style="padding:0">
+            <a href=""><div class="item item-avatar item-content item-borderless" style="padding:0"><img src="../img/jonny_depp.jpg"></div></a>
         </div>
 
-        <div class="col col-25">
-            <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
+        <div class="col" style="padding:0">
+            <button class="button button-positive icon ion-gear-a" style="border-radius:50%; border-style:solid"></button>
         </div>
 
-        <div class="col col-25">
-            <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
+        <div class="col" style="padding:0">
+            <a href=""><div class="item item-avatar item-borderless" style="padding:0"><img src="../img/jonny_depp.jpg"></div></a>
         </div>
 
-        <div class="col col-25">
-            <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
+        <div class="col" style="padding:0">
+            <a href=""><div class="item item-avatar item-borderless" style="padding:0"><img src="../img/jonny_depp.jpg"></div></a>
         </div>
+
    </div>
 
 
