--- a/www/pages/home/post-types/album/album.html
+++ b/www/pages/home/post-types/album/album.html
@@ -1,39 +1,55 @@
 <div class="card">
     <ion-item class="item-avatar item-icon-right" id="home-list-item15">
-        <img ng-src="{{vm.apiurl}}{{vm.post.owner_info.avatar}}">
-        <h2>{{vm.post.owner_info.full_name}}</h2>
-        <p style="white-space:normal;">{{vm.post.created_at.diffForHumans}}</p>
+        <img ng-src="{{vm.apiurl}}{{vm.post.post.owner_info.avatar}}">
+        <h2>{{vm.post.post.owner_info.full_name}}<span style="font-size: 14px;" ng-if="vm.post.post.isShared"> shared a post</span></h2>
+        <p style="white-space:normal;">{{vm.post.post.created_at.diffForHumans}}</p>
 
     </ion-item>
-    <div class="item item-text-wrap" ng-if="vm.post.text_body !== ''">
-        {{vm.post.text_body}}
+    <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
+        {{vm.post.post.text_body}}
     </div>
 
 
     <div class="item item-image">
 
         <div class="row row-no-padding" style="margin-bottom:10px">
-            <div class="col col-100 album-image album-first-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.files[0].file_path}})'}">
+            <div class="col col-100 album-image album-first-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.post.files[0].file_path}})'}">
             </div>
         </div>
 
-        <div class="row row-no-padding" style="margin-bottom:10px" ng-show="vm.post.files[2]">
-            <div class="col col-50 album-image" style="margin-right:5px" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.files[1].file_path}})'}">
+        <div class="row row-no-padding" style="margin-bottom:10px" ng-show="vm.post.post.files[2]">
+            <div class="col col-50 album-image" style="margin-right:5px" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.post.files[1].file_path}})'}">
             </div>
-            <div class="col col-50 album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.files[2].file_path}})'}">
+            <div class="col col-50 album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.post.files[2].file_path}})'}">
             </div>
         </div>
 
-        <div class="row row-no-padding" ng-show="vm.post.files[5]">
-            <div class="col col-33 album-image"  style="margin-right:5px" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.files[3].file_path}})'}">
+        <div class="row row-no-padding" ng-show="vm.post.post.files[5]">
+            <div class="col col-33 album-image"  style="margin-right:5px" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.post.files[3].file_path}})'}">
             </div>
-            <div class="col col-33 album-image"  style="margin-right:5px" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.files[4].file_path}})'}">
+            <div class="col col-33 album-image"  style="margin-right:5px" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.post.files[4].file_path}})'}">
             </div>
-            <div class="col col-33 album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.files[5].file_path}})'}">
+            <div class="col col-33 album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.post.files[5].file_path}})'}">
             </div>
         </div>
 
     </div>
+
+
+
+
+
+    <!--if shared post-->
+    <div class="row row-no-padding" ng-if="vm.post.post.isShared">
+        <div class="col col-10"></div>
+        <div class="col col-90">
+            <div class="item item-avatar item-text-wrap">
+                <img ng-src="{{vm.apiurl}}{{vm.post.shared_post.originator_info.avatar}}"/>
+                <h2>{{vm.post.shared_post.originator_info.full_name}}</h2>
+                <p>{{vm.post.shared_post.edit_text_body}}</p>
+            </div>
+        </div>
+    </div><!--if shared post-->
 
 
 
@@ -43,13 +59,13 @@
     <div class="item row">
         <div class="col col-20">
             <a ng-click="vm.likePost()"><i class="icon ion-heart" style="font-size:20px; vertical-align:middle;"></i></a>
-            <span style="font-size:12px"> {{vm.post.likes}}</span></div>
+            <span style="font-size:12px"> {{vm.post.post.likes}}</span></div>
         <div ui-sref="app.tabs.comments" class="col col-20">
             <a ng-click="vm.goToCommentPage('album')"><i class="icon ion-ios-chatbubble" style="font-size:22px; vertical-align:middle;"></i></a>
-            <span style="font-size:12px"> {{vm.post.comments}}</span></div>
+            <span style="font-size:12px"> {{vm.post.post.comments}}</span></div>
         <div class="col col-20">
             <a href=""><i class="icon ion-android-share-alt" style="font-size:20px; vertical-align:middle;"></i></a>
-            <span style="font-size:12px"> {{vm.post.shares}}</span></div>
+            <span style="font-size:12px"> {{vm.post.post.shares}}</span></div>
         <div class="col col-offset-20 col-20">
             <a class="item-icon-right" href=""><i class="icon ion-more" style="font-size:20px; vertical-align:middle;"></i></a></div>
     </div>
