working on profile page and style.css

--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -115,28 +115,28 @@
 
 
 <div>
-    <div class="row item item-borderless">
-        <div class="col" style="padding:0">
-            <a href=""><div class="item item-avatar item-content item-borderless" style="padding:0"><img src="../img/jonny_depp.jpg"></div></a>
+    <div class="row item">
+
+
+        <div class="col col-33" style="padding-left:10%">
+            <a href="" style="text-decoration:none"><button class="button button-balanced button-outline fa fa-group"></button><br><span style="font-size:12px">Connections</span></a>
         </div>
 
-        <div class="col" style="padding:0">
-            <button class="button button-positive icon ion-gear-a" style="border-radius:50%; border-style:solid"></button>
+        <div class="col col-33" style="padding-left:7%">
+            <a href="" style="text-decoration:none"><button class="button button-balanced button-outline ion-images"></button><br><span style="font-size:12px">Images</span></a>
         </div>
 
-        <div class="col" style="padding:0">
-            <a href=""><div class="item item-avatar item-borderless" style="padding:0"><img src="../img/jonny_depp.jpg"></div></a>
+        <div class="col col-33" style="padding-left:5%">
+            <a href="" style="text-decoration:none"><button class="button button-balanced button-outline icon ion-gear-a" ></button><br><span style="font-size:12px">settings</span></a>
         </div>
 
-        <div class="col" style="padding:0">
-            <a href=""><div class="item item-avatar item-borderless" style="padding:0"><img src="../img/jonny_depp.jpg"></div></a>
-        </div>
+
 
    </div>
 
 
 
-   <div class="row item item-borderless">
+   <!-- <div class="row item item-borderless">
        <div class="col col-25">
            <a href=""><div class="item item-avatar item-content item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
        </div>
@@ -152,27 +152,24 @@
        <div class="col col-25">
            <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
        </div>
-  </div>
+  </div> -->
 
 
 
-  <div class="row item item-borderless">
-      <div class="col col-25">
-          <a href=""><div class="item item-avatar item-content item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
+  <!-- <div class="row item item-borderless" style="padding-left:30%">
+
+      <div class="col col-33">
+          <a href="" style="text-decoration:none"><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div><span style="font-size:15px; padding-left:10%">tonny</span></a>
       </div>
 
-      <div class="col col-25">
-          <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
+      <div class="col col-33">
+          <a href="" style="text-decoration:none"><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div><span style="font-size:15px; padding-left:10%">tonny</span></a>
       </div>
 
-      <div class="col col-25">
-          <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
+      <div class="col col-33">
+          <a href="" style="text-decoration:none"><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div><span style="font-size:15px; padding-left:10%">tonny</span></a>
       </div>
-
-      <div class="col col-25">
-          <a href=""><div class="item item-avatar item-borderless"><img src="../img/jonny_depp.jpg"></div></a>
-      </div>
- </div>
+ </div> -->
 
 
  <button class="button button-block button-light"><span style="color:#11a74a">See All Connections</span></button>
