--- a/www/pages/home/profile/profile.html
+++ b/www/pages/home/profile/profile.html
@@ -123,7 +123,7 @@
         </div>
 
         <div class="col col-33" style="padding-left:7%">
-            <a href="" style="text-decoration:none"><button class="button button-balanced button-outline ion-images"></button><br><span style="font-size:12px">Images</span></a>
+            <a href="" style="text-decoration:none"><button class="button button-balanced button-outline icon ion-images"></button><br><span style="font-size:12px">Images</span></a>
         </div>
 
         <div class="col col-33" style="padding-left:5%">
